--- a/src/main/resources/templates/reservation/update.html
+++ b/src/main/resources/templates/reservation/update.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html
-        data-layout-decorate="~{fragments/base}">
+<html data-layout-decorate="~{fragments/base}">
 <span data-layout-fragment="title"
       data-th-text="'Actualizar reserva para ' + ${data.area.name} + ' (' + ${data.municipality.name} + ')'"></span>
 <main data-layout-fragment="content">
