--- a/src/main/resources/templates/municipality/list.html
+++ b/src/main/resources/templates/municipality/list.html
@@ -32,6 +32,9 @@
                    data-th-href="@{/area/list/{id}(id=${object.id})}" class="btn btn-success" role="button">Ver
                     areas</a>
                 <a data-th-if="${session.user instanceof T(app.model.MunicipalManager)}"
+                   data-th-href="@{/municipality/update}" class="btn btn-warning" role="button">Actualizar
+                </a>
+                <a data-th-if="${session.user instanceof T(app.model.EnviromentalManager)}"
                    data-th-href="@{/municipality/update/{id}(id=${object.id})}" class="btn btn-warning" role="button">Actualizar
                 </a>
                 <a data-th-if="${session.user instanceof T(app.model.EnviromentalManager) and object.active}"
