--- a/src/main/resources/templates/service/list.html
+++ b/src/main/resources/templates/service/list.html
@@ -26,10 +26,10 @@
             <td data-th-text="*{object.toScheduleString}"></td>
             <td data-th-text="*{object.toPeriodString}"></td>
             <td>
-                <a data-th-if="${session.user instanceof T(app.model.MunicipalManager) and object.ended and data[objectStat.index].municipality.active and data[objectStat.index].area.active}"
+                <a data-th-if="${session.user instanceof T(app.model.MunicipalManager) and object.active and data[objectStat.index].municipality.active and data[objectStat.index].area.active}"
                    data-th-href="@{/service/update/{id}(id=${object.id})}" class="btn btn-warning"
                    role="button">Actualizar</a>
-                <a data-th-if="${session.user instanceof T(app.model.MunicipalManager) and object.ended and data[objectStat.index].municipality.active and data[objectStat.index].area.active}"
+                <a data-th-if="${session.user instanceof T(app.model.MunicipalManager) and object.active and data[objectStat.index].municipality.active and data[objectStat.index].area.active}"
                    data-th-href="@{/service/delete/{id}(id=${object.id})}"
                    onclick="return confirm('¿Seguro que desea eliminar el servicio?')"
                    class="btn btn-danger" role="button">Eliminar servicio</a>
