--- a/src/main/resources/static/css/base.css
+++ b/src/main/resources/static/css/base.css
@@ -20,20 +20,16 @@ main {
   flex: 1 0 auto;
 }
 
-img {
-    margin: 1em;
-}
-
 .btn {
-    margin: 0.5em;
+    margin: 0.25em;
 }
 
 .table td {
-    vertical-align: initial;
+    vertical-align: middle;
 }
 
 main > table tr > :last-child {
-    text-align: center;
+    text-align: center; /* añadir a columnas con botones */
 }
 
 form {
@@ -44,6 +40,7 @@ form {
 
 form table {
     text-align: initial;
+    margin: 1em;
 }
 
 form td:not(:first-child) {
