--- a/src/main/resources/templates/area/list.html
+++ b/src/main/resources/templates/area/list.html
@@ -11,10 +11,11 @@
             <th>Tipo</th>
             <th>Descripción</th>
             <th>Localización</th>
-            <th data-th-if="${session.user instanceof T(app.model.MunicipalManager)}">Imagen</th>
             <th data-th-if="${session.user instanceof T(app.model.MunicipalManager)}">Ocupación</th>
-            <th>
-                <a data-th-if="${session.user instanceof T(app.model.MunicipalManager) and session.user.municipality == data[0].municipality.id and data[0].municipality.active}"
+            <th data-th-if="${session.user instanceof T(app.model.MunicipalManager)}">Imagen</th>
+            <th class="text-center">Otros</th>
+            <th class="text-center" data-th-if="${session.user instanceof T(app.model.MunicipalManager) and session.user.municipality == data[0].municipality.id and data[0].municipality.active}">
+                <a
                    data-th-href="@{/area/add}" class="btn btn-success"
                    role="button">Añadir</a>
             </th>
@@ -22,7 +23,10 @@
         </thead>
         <tbody>
         <tr data-th-if="${#lists.isEmpty(object)}">
-            <td colspan="7" data-th-if="${session.user instanceof T(app.model.MunicipalManager)}">No hay ninguna área
+            <td colspan="8" data-th-if="${session.user instanceof T(app.model.MunicipalManager) and session.user.municipality == data[0].municipality.id and data[0].municipality.active}">No hay ninguna área
+                registrada
+            </td>
+            <td colspan="7" data-th-if="${session.user instanceof T(app.model.MunicipalManager) and session.user.municipality == data[0].municipality.id and not data[0].municipality.active}">No hay ninguna área
                 registrada
             </td>
             <td colspan="5" data-th-unless="${session.user instanceof T(app.model.MunicipalManager)}">No hay ninguna
@@ -37,24 +41,20 @@
             <td data-th-text="*{object.type.name}"></td>
             <td data-th-text="*{object.description}"></td>
             <td data-th-text="*{object.location}"></td>
-            <td data-th-if="${session.user instanceof T(app.model.MunicipalManager)}"><a data-th-href="*{object.image}"
-                                                                                         data-th-text="*{object.image}"
-                                                                                         target="_blank"></a></td>
             <td data-th-if="${session.user instanceof T(app.model.MunicipalManager)}" data-th-text="${data[objectStat.index].occupied}"></td>
-            <td>
-                <a data-th-href="@{/area-period/list/{id}(id=${object.id})}" class="btn btn-success" role="button">Ver
-                    Horarios</a>
+            <td data-th-if="${session.user instanceof T(app.model.MunicipalManager)}"><a class="btn btn-info" data-th-href="*{object.image}"
+                                                                                         target="_blank">Abrir</a></td>
+            <td class="text-center">
+                <a data-th-href="@{/area-period/list/{id}(id=${object.id})}" class="btn btn-success" role="button">Horarios</a>
                 <a data-th-if="${session.user instanceof T(app.model.MunicipalManager) and session.user.municipality == data[objectStat.index].municipality.id}"
-                   data-th-href="@{/zone/list/{id}(id=${object.id})}" class="btn btn-success" role="button">Ver
-                    zonas</a>
+                   data-th-href="@{/zone/list/{id}(id=${object.id})}" class="btn btn-success" role="button">Zonas</a>
                 <a data-th-if="${(session.user == null) or (session.user instanceof T(app.model.Citizen)) or (session.user instanceof T(app.model.MunicipalManager) and session.user.municipality == data[objectStat.index].municipality.id)}"
-                   data-th-href="@{/service/list/{id}(id=${object.id})}" class="btn btn-success" role="button">Ver
-                    servicios</a>
-                <a data-th-if="${session.user instanceof T(app.model.MunicipalManager) and object.active and session.user.municipality == data[objectStat.index].municipality.id and data[0].municipality.active}"
-                   data-th-href="@{/area/update/{id}(id=${object.id})}" class="btn btn-warning" role="button">Actualizar
+                   data-th-href="@{/service/list/{id}(id=${object.id})}" class="btn btn-success" role="button">Servicios</a>
+            </td>
+            <td class="text-center" data-th-if="${session.user instanceof T(app.model.MunicipalManager) and object.active and session.user.municipality == data[objectStat.index].municipality.id and data[0].municipality.active}">
+                <a data-th-href="@{/area/update/{id}(id=${object.id})}" class="btn btn-warning" role="button">Actualizar
                 </a>
-                <a data-th-if="${session.user instanceof T(app.model.MunicipalManager) and object.active and session.user.municipality == data[objectStat.index].municipality.id and data[0].municipality.active}"
-                   data-th-href="@{/area/delete/{id}(id=${object.id})}"
+                <a data-th-href="@{/area/delete/{id}(id=${object.id})}"
                    onclick="return confirm('¿Seguro que desea eliminar el área?')" class="btn btn-danger" role="button">Eliminar
                 </a>
             </td>
