--- a/src/main/resources/templates/citizen/add.html
+++ b/src/main/resources/templates/citizen/add.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html
         data-layout-decorate="~{fragments/base}">
-<span data-layout-fragment="title">Dar de alta ciudadano/ciudadana</span>
+<span data-layout-fragment="title">Registro de ciudadano</span>
 <main data-layout-fragment="content">
     <form
             onsubmit="return confirm('¿Seguro que quiere darse de alta y los datos son correctos?')"
