--- a/src/main/resources/templates/citizen/update.html
+++ b/src/main/resources/templates/citizen/update.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html
         data-layout-decorate="~{fragments/base}">
-<span data-layout-fragment="title">Actualizar datos del ciudadano o de la ciudadana</span>
+<span data-layout-fragment="title">Actualizar datos personales</span>
 <main data-layout-fragment="content">
     <form onsubmit="return confirm('¿Seguro que quiere actualizar los datos y los datos son correctos?')"
           data-th-object="${object}" method="post">
