--- a/src/main/resources/templates/area/list.html
+++ b/src/main/resources/templates/area/list.html
@@ -23,13 +23,13 @@
         </thead>
         <tbody>
         <tr data-th-if="${#lists.isEmpty(object)}">
-            <td colspan="8" data-th-if="${session.user instanceof T(app.model.MunicipalManager) and session.user.municipality == data[0].municipality.id and data[0].municipality.active}">No hay ninguna área
+            <td class="text-center" colspan="8" data-th-if="${session.user instanceof T(app.model.MunicipalManager) and session.user.municipality == data[0].municipality.id and data[0].municipality.active}">No hay ninguna área
                 registrada
             </td>
-            <td colspan="7" data-th-if="${session.user instanceof T(app.model.MunicipalManager) and session.user.municipality == data[0].municipality.id and not data[0].municipality.active}">No hay ninguna área
+            <td class="text-center" colspan="7" data-th-if="${session.user instanceof T(app.model.MunicipalManager) and session.user.municipality == data[0].municipality.id and not data[0].municipality.active}">No hay ninguna área
                 registrada
             </td>
-            <td colspan="5" data-th-unless="${session.user instanceof T(app.model.MunicipalManager)}">No hay ninguna
+            <td class="text-center" colspan="5" data-th-unless="${session.user instanceof T(app.model.MunicipalManager)}">No hay ninguna
                 área
                 registrada
             </td>
@@ -42,20 +42,19 @@
             <td data-th-text="*{object.description}"></td>
             <td data-th-text="*{object.location}"></td>
             <td data-th-if="${session.user instanceof T(app.model.MunicipalManager)}" data-th-text="${data[objectStat.index].occupied}"></td>
-            <td data-th-if="${session.user instanceof T(app.model.MunicipalManager)}"><a class="btn btn-info" data-th-href="*{object.image}"
-                                                                                         target="_blank">Abrir</a></td>
+            <td data-th-if="${session.user instanceof T(app.model.MunicipalManager)}"><a class="btn btn-info" data-th-href="*{object.image}" target="_blank">Abrir</a></td>
             <td class="text-center">
-                <a data-th-href="@{/area-period/list/{id}(id=${object.id})}" class="btn btn-success" role="button">Horarios</a>
-                <a data-th-if="${session.user instanceof T(app.model.MunicipalManager) and session.user.municipality == data[objectStat.index].municipality.id}"
-                   data-th-href="@{/zone/list/{id}(id=${object.id})}" class="btn btn-success" role="button">Zonas</a>
+                <a data-th-href="@{/area-period/list/{id}(id=${object.id})}" class="btn btn-info" role="button">Horarios</a>
                 <a data-th-if="${(session.user == null) or (session.user instanceof T(app.model.Citizen)) or (session.user instanceof T(app.model.MunicipalManager) and session.user.municipality == data[objectStat.index].municipality.id)}"
-                   data-th-href="@{/service/list/{id}(id=${object.id})}" class="btn btn-success" role="button">Servicios</a>
+                   data-th-href="@{/service/list/{id}(id=${object.id})}" class="btn btn-info" role="button">Servicios</a>
+                <a data-th-if="${session.user instanceof T(app.model.MunicipalManager) and session.user.municipality == data[objectStat.index].municipality.id}"
+                   data-th-href="@{/zone/list/{id}(id=${object.id})}" class="btn btn-info" role="button">Zonas</a>
             </td>
             <td class="text-center" data-th-if="${session.user instanceof T(app.model.MunicipalManager) and object.active and session.user.municipality == data[objectStat.index].municipality.id and data[0].municipality.active}">
                 <a data-th-href="@{/area/update/{id}(id=${object.id})}" class="btn btn-warning" role="button">Actualizar
                 </a>
                 <a data-th-href="@{/area/delete/{id}(id=${object.id})}"
-                   onclick="return confirm('¿Seguro que desea eliminar el área?')" class="btn btn-danger" role="button">Eliminar
+                   onclick="return confirm('¿Seguro que desea eliminar el área?')" class="btn btn-danger" role="button">Dar de baja
                 </a>
             </td>
         </tr>
