--- a/src/main/resources/templates/areaPeriod/add.html
+++ b/src/main/resources/templates/areaPeriod/add.html
@@ -2,7 +2,7 @@
 <html
         data-layout-decorate="~{fragments/base}">
 <span data-layout-fragment="title"
-      data-th-text="'Añadir horario para ' + ${data.area.name} + ' (' + ${data.municipality.name} + ')'"></span>
+      data-th-text="'Añadir horario a ' + ${data.area.name} + ' (' + ${data.municipality.name} + ')'"></span>
 <main data-layout-fragment="content">
     <form
             onsubmit="return confirm('¿Seguro que desea añadir el horario y los datos son correctos?')"
