--- a/src/main/resources/templates/controlStaff/list.html
+++ b/src/main/resources/templates/controlStaff/list.html
@@ -15,19 +15,19 @@
             <th data-th-if="${session.user instanceof T(app.model.MunicipalManager)}">Validez</th>
             <th>Correo electrónico</th>
             <th>Horario</th>
-            <th>
-                <a data-th-if="${session.user instanceof T(app.model.MunicipalManager) and data[0].municipality.active and data[0].area.active and data[0].areaPeriod.active}"
-                   data-th-href="@{/control-staff/add/{id}(id=${data[0].areaPeriod.id}) and data[0].municipality.active and data[0].area.active}" class="btn btn-success"
+            <th data-th-if="${(session.user instanceof T(app.model.MunicipalManager) and data[0].municipality.active and data[0].area.active and data[0].areaPeriod.active) or (session.user instanceof T(app.model.ControlStaff))}">
+                <a
+                   data-th-href="@{/control-staff/add/{id}(id=${data[0].areaPeriod.id})}" class="btn btn-success"
                    role="button">Añadir</a>
             </th>
         </tr>
         </thead>
         <tbody>
         <tr data-th-if="${#lists.isEmpty(object)}">
-            <td colspan="6" data-th-if="${session.user instanceof T(app.model.MunicipalManager)}">No hay ningún personal
+            <td class="text-center" colspan="6" data-th-if="${session.user instanceof T(app.model.MunicipalManager)}">No hay ningún personal
                 de control registrado
             </td>
-            <td colspan="5" data-th-unless="${session.user instanceof T(app.model.MunicipalManager)}">No hay ningún personal
+            <td class="text-center" colspan="5" data-th-unless="${session.user instanceof T(app.model.MunicipalManager)}">No hay ningún personal
                 de control registrado
             </td>
         </tr>
@@ -38,15 +38,15 @@
                 data-th-if="${session.user instanceof T(app.model.MunicipalManager)}"></td>
             <td data-th-text="*{object.mail}"></td>
             <td data-th-text="*{data[objectStat.index].areaPeriod.toPeriodString}"></td>
-            <td>
+            <td data-th-if="${(session.user instanceof T(app.model.MunicipalManager) and data[0].municipality.active and data[0].area.active and data[0].areaPeriod.active) or (session.user instanceof T(app.model.ControlStaff))}">
                 <a data-th-if="${object.active and (session.user instanceof T(app.model.MunicipalManager)) and data[objectStat.index].municipality.active and data[objectStat.index].area.active and data[objectStat.index].areaPeriod.active and data[objectStat.index].municipality.active and data[objectStat.index].area.active}"
                    data-th-href="@{/control-staff/update/{id}(id=${object.id})}" class="btn btn-warning" role="button">Actualizar
                 </a>
-                <a data-th-if="${object.active and (session.user instanceof T(app.model.ControlStaff)) }"
+                <a data-th-if="${object.active and (session.user instanceof T(app.model.ControlStaff))}"
                    data-th-href="@{/control-staff/update}" class="btn btn-warning" role="button">Actualizar
                 </a>
                 <a data-th-if="${object.active and (session.user instanceof T(app.model.MunicipalManager)) and data[objectStat.index].municipality.active and data[objectStat.index].area.active and data[objectStat.index].areaPeriod.active}"
-                   data-th-href="@{/control-staff/delete/{id}(id=${object.id}) and data[objectStat.index].municipality.active and data[objectStat.index].area.active}"
+                   data-th-href="@{/control-staff/delete/{id}(id=${object.id})}"
                    onclick="return confirm('¿Seguro que desea dar de baja al personal de control?')"
                    class="btn btn-danger" role="button">Dar de baja</a></td>
         </tr>
