--- a/src/main/resources/templates/municipalManager/list.html
+++ b/src/main/resources/templates/municipalManager/list.html
@@ -24,10 +24,10 @@
         </thead>
         <tbody>
         <tr data-th-if="${#lists.isEmpty(object)}">
-            <td colspan="7" data-th-if="${session.user instanceof T(app.model.EnviromentalManager)}">Lista de gestores y
+            <td class="text-center" colspan="7" data-th-if="${session.user instanceof T(app.model.EnviromentalManager)}">Lista de gestores y
                 gestoras municipales
             </td>
-            <td colspan="6" data-th-unless="${session.user instanceof T(app.model.EnviromentalManager)}">Lista de
+            <td class="text-center" colspan="6" data-th-unless="${session.user instanceof T(app.model.EnviromentalManager)}">Lista de
                 gestores y
                 gestoras municipales
             </td>
