--- a/src/main/resources/templates/service/list.html
+++ b/src/main/resources/templates/service/list.html
@@ -10,8 +10,8 @@
             <th>Tipo</th>
             <th>Fechas</th>
             <th>Horario</th>
-            <th>
-                <a data-th-if="${session.user instanceof T(app.model.MunicipalManager) and data[0].municipality.active and data[0].area.active}"
+            <th class="text-center" data-th-if="${session.user instanceof T(app.model.MunicipalManager) and data[0].municipality.active and data[0].area.active}">
+                <a
                    data-th-href="@{/service/add/{id}(id=${data[0].area.id})}" class="btn btn-success"
                    role="button">Añadir</a>
             </th>
@@ -19,20 +19,21 @@
         </thead>
         <tbody>
         <tr data-th-if="${#lists.isEmpty(object)}">
-            <td colspan="5">No hay ningún servicio registrado</td>
+            <td class="text-center" colspan="4" data-th-if="${session.user instanceof T(app.model.MunicipalManager) and object.ended and data[objectStat.index].municipality.active and data[objectStat.index].area.active}">No hay ningún servicio registrado</td>
+            <td class="text-center" colspan="3" data-th-unless="${session.user instanceof T(app.model.MunicipalManager) and object.ended and data[objectStat.index].municipality.active and data[objectStat.index].area.active}">No hay ningún servicio registrado</td>
         </tr>
         <tr data-th-each="object: ${object}">
             <td data-th-text="*{data[objectStat.index].serviceType.name}"></td>
             <td data-th-text="*{object.toScheduleString}"></td>
             <td data-th-text="*{object.toPeriodString}"></td>
-            <td>
-                <a data-th-if="${session.user instanceof T(app.model.MunicipalManager) and object.ended and data[objectStat.index].municipality.active and data[objectStat.index].area.active}"
+            <td class="text-center" data-th-if="${session.user instanceof T(app.model.MunicipalManager) and object.ended and data[objectStat.index].municipality.active and data[objectStat.index].area.active}">
+                <a
                    data-th-href="@{/service/update/{id}(id=${object.id})}" class="btn btn-warning"
                    role="button">Actualizar</a>
-                <a data-th-if="${session.user instanceof T(app.model.MunicipalManager) and object.ended and data[objectStat.index].municipality.active and data[objectStat.index].area.active}"
+                <a
                    data-th-href="@{/service/delete/{id}(id=${object.id})}"
                    onclick="return confirm('¿Seguro que desea eliminar el servicio?')"
-                   class="btn btn-danger" role="button">Eliminar servicio</a>
+                   class="btn btn-danger" role="button">Eliminar</a>
             </td>
         </tr>
         </tbody>
