--- a/src/main/resources/templates/zone/list.html
+++ b/src/main/resources/templates/zone/list.html
@@ -10,8 +10,8 @@
             <th>Nombre</th>
             <th>Capacidad</th>
             <th>Fecha de alta / Fecha de baja</th>
-            <th>
-                <a data-th-if="${session.user instanceof T(app.model.MunicipalManager) and data[0].municipality.active and data[0].area.active}"
+            <th class="text-center" data-th-if="${session.user instanceof T(app.model.MunicipalManager) and data[0].municipality.active and data[0].area.active}">
+                <a
                    data-th-href="@{/zone/add/{id}(id=${data[0].area.id})}" class="btn btn-success"
                    role="button">Añadir</a>
             </th>
@@ -19,17 +19,17 @@
         </thead>
         <tbody>
         <tr data-th-if="${#lists.isEmpty(object)}">
-            <td colspan="4">No hay ninguna zona registrada</td>
+            <td class="text-center" colspan="4">No hay ninguna zona registrada</td>
         </tr>
         <tr data-th-each="object: ${object}">
             <td data-th-text="*{object.name}"></td>
             <td data-th-text="*{object.capacity}"></td>
             <td data-th-text="*{object.toSignString}"></td>
-            <td>
-                <a data-th-if="${session.user instanceof T(app.model.MunicipalManager) and object.active and data[objectStat.index].municipality.active and data[objectStat.index].area.active}"
+            <td class="text-center" data-th-if="${session.user instanceof T(app.model.MunicipalManager) and data[0].municipality.active and data[0].area.active}">
+                <a
                    data-th-href="@{/service/update/{id}(id=${object.id})}" class="btn btn-warning"
                    role="button">Actualizar</a>
-                <a data-th-if="${session.user instanceof T(app.model.MunicipalManager) and object.active and data[objectStat.index].municipality.active and data[objectStat.index].area.active}"
+                <a
                    data-th-href="@{/zone/delete/{id}(id=${object.id})}"
                    onclick="return confirm('¿Seguro que desea dar de baja la zona?')"
                    class="btn btn-danger" role="button">Dar de baja</a></td>
