--- a/src/main/resources/templates/zone/update.html
+++ b/src/main/resources/templates/zone/update.html
@@ -2,7 +2,7 @@
 <html
         data-layout-decorate="~{fragments/base}">
 <span data-layout-fragment="title"
-      data-th-text="'Actualizar zona de ' + ${data[0].area.name} + ' (' + ${data[0].municipality.name} + ')'"></span>
+      data-th-text="'Actualizar zona de ' + ${data.area.name} + ' (' + ${data.municipality.name} + ')'"></span>
 <main data-layout-fragment="content">
     <form onsubmit="return confirm('¿Seguro que desea actualizar los datos y los datos son correctos?')"
           data-th-object="${object}" method="post">
