--- a/src/main/resources/templates/municipality/add.html
+++ b/src/main/resources/templates/municipality/add.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html
         data-layout-decorate="~{fragments/base}">
-<span data-layout-fragment="title">Añadir un municipio</span>
+<span data-layout-fragment="title">Añadir municipio</span>
 <main data-layout-fragment="content">
     <form
             onsubmit="return confirm('¿Seguro que desea dar de alta el municipio y los datos son correctos?')"
