--- a/src/main/resources/templates/municipality/update.html
+++ b/src/main/resources/templates/municipality/update.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html
         data-layout-decorate="~{fragments/base}">
-<span data-layout-fragment="title">Actualizar un municipio</span>
+<span data-layout-fragment="title">Actualizar municipio</span>
 <main data-layout-fragment="content">
     <form onsubmit="return confirm('¿Seguro que desea actualizar los datos y los datos son correctos?')"
           data-th-object="${object}" method="post">
