--- a/src/main/resources/templates/zone/list.html
+++ b/src/main/resources/templates/zone/list.html
@@ -26,10 +26,10 @@
             <td data-th-text="*{object.capacity}"></td>
             <td data-th-text="*{object.toSignString}"></td>
             <td class="text-center" data-th-if="${session.user instanceof T(app.model.MunicipalManager) and data[0].municipality.active and data[0].area.active}">
-                <a
-                   data-th-href="@{/service/update/{id}(id=${object.id})}" class="btn btn-warning"
+                <a data-th-if="*{object.active}"
+                   data-th-href="@{/zone/update/{id}(id=${object.id})}" class="btn btn-warning"
                    role="button">Actualizar</a>
-                <a
+                <a data-th-if="*{object.active}"
                    data-th-href="@{/zone/delete/{id}(id=${object.id})}"
                    onclick="return confirm('¿Seguro que desea dar de baja la zona?')"
                    class="btn btn-danger" role="button">Dar de baja</a></td>
