--- a/src/main/resources/templates/area/list.html
+++ b/src/main/resources/templates/area/list.html
@@ -13,7 +13,7 @@
             <th>Localización</th>
             <th data-th-if="${session.user instanceof T(app.model.MunicipalManager)}">Ocupación</th>
             <th data-th-if="${session.user instanceof T(app.model.MunicipalManager)}">Imagen</th>
-            <th class="text-center">Otros</th>
+            <th class="text-center">Información</th>
             <th class="text-center" data-th-if="${session.user instanceof T(app.model.MunicipalManager) and session.user.municipality == data[0].municipality.id and data[0].municipality.active}">
                 <a
                    data-th-href="@{/area/add}" class="btn btn-success"
