--- a/src/main/resources/templates/areaPeriod/list.html
+++ b/src/main/resources/templates/areaPeriod/list.html
@@ -9,7 +9,7 @@
         <tr>
             <th>Fechas</th>
             <th>Horario</th>
-            <th class="text-center">Otros</th>
+            <th class="text-center">Información</th>
             <th class="text-center" data-th-if="${session.user instanceof T(app.model.MunicipalManager) and session.user.municipality == data[0].municipality.id and data[0].municipality.active and data[0].area.active}">
                 <a
                    data-th-href="@{/area-period/add/{id}(id=${data[0].area.id})}" class="btn btn-success"
