--- a/src/main/resources/templates/area/list.html
+++ b/src/main/resources/templates/area/list.html
@@ -12,7 +12,7 @@
             <th>Descripción</th>
             <th>Localización</th>
             <th data-th-if="${session.user instanceof T(app.model.MunicipalManager)}">Ocupación</th>
-            <th data-th-if="${session.user instanceof T(app.model.MunicipalManager)}">Imagen</th>
+            <th data-th-if="${session.user instanceof T(app.model.MunicipalManager)}">Mapa</th>
             <th class="text-center">Información</th>
             <th class="text-center" data-th-if="${session.user instanceof T(app.model.MunicipalManager) and session.user.municipality == data[0].municipality.id and data[0].municipality.active}">
                 <a
