--- a/src/main/resources/templates/areaPeriod/update.html
+++ b/src/main/resources/templates/areaPeriod/update.html
@@ -9,7 +9,7 @@
         <table>
             <tr>
                 <th><label for="scheduleStart">Fecha de inicio</label></th>
-                <td><input required="required" type="date" id="scheduleStart" data-th-field="*{scheduleStart}"></td>
+                <td><input required="required" type="date" id="scheduleStart" data-th-field="*{scheduleStart}" data-th-disabled="${object.scheduleStart.isBefore(data.today)}" data-th-attr="min=${data.today}"></td>
             </tr>
             <tr data-th-each="err : ${#fields.errors('scheduleStart')}">
                 <td colspan="2">
